--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -485,11 +485,11 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero .carousel-indicators li.active {
   opacity: 1;
-  background: #d9232d;
+  background: #37517e;
 }
 
 #hero .btn-get-started {
-  font-family: "Raleway", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 1px;
@@ -500,11 +500,11 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
   color: #fff;
   animation-delay: 0.8s;
-  background: #d9232d;
+  background: #37517e;
 }
 
 #hero .btn-get-started:hover {
-  background: #df3740;
+  background: #73c5eb;
 }
 
 @media (max-width: 992px) {
